# sapling

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  codspeed.yml  release.yml
docs/: index.md
docs/api/: backends.md  database.md  errors.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: backends.md  basic-usage.md  fastapi.md  transactions.md
src/sapling/: __init__.py  database.py  document.py  errors.py  settings.py
src/sapling/backends/: __init__.py  base.py  memory.py  sqlite.py
tests/: bench_sapling.py  test_fastapi.py  test_sapling.py
