[project]
name = "sapling-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Justin Chapman", email = "commonmodestudio@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pydantic>=2.12.5", "pydantic-settings>=2.12.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sapling"

[dependency-groups]
dev = [
  "fastapi>=0.125.0",
  "httpx>=0.28.1",
  "pre-commit>=4.0.1",
  "tryke @ git+https://github.com/thejchap/tryke",
  "ruff>=0.13.0",
  "ty>=0.0.4",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN201", "PLR2004"]
"src/sapling/backends/sqlite.py" = ["S608"]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # may cause issues with formatter
  "COM812",
  # incompatible with D213
  "D212",
  # incompatible with D211
  "D203",
  # missing docstring
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D107",
  # TODOs
  "FIX002",
  "FIX003",
  "TD003",
  "ERA001",
  # too many arguments
  "PLR0913",
  # causes error
  "ISC001",
]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
